# dsaflow

./: .gitignore  LICENSE  README.md  mypypath.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
dsaflow/: gitt.py  pdict.py
dsaflow/scripts/: dsaflow.py
jf/: color.py  command.py  common.py  config.py  git.py  green.py  jenkins.py  run.py  sync.py
jf/cmd/: branch.py  commits.py  config.py  delete.py  green.py  jenkins.py  jf.py  list.py  publish.py  rebase.py  start.py
jflow/: __init__.py  branch.py  config.py  git.py  green.py  publish.py  run.py  struct.py  sync.py
jflow/cmd/: branches.py  current_ref.py  delete.py  dlst.py  gh.py  green.py  jenkins.py  list.py  publish.py  rebase.py  resolve.py  start.py  sync.py
jflow/scripts/: jflow.py
src/jf/: branch.py  color.py  command.py  common.py  config.py  git.py  green.py  jenkins.py  repo.py  schema.py  sync.py
src/jf/cmd/: config.py  debug.py  delete.py  green.py  jenkins.py  jf.py  list.py  publish.py  rebase.py  refs.py  root.py  start.py  sync.py
src/jflow/: __init__.py  color.py  git.py  publish.py  run.py
src/jflow/cmd/: delete.py  jenkins.py  resolve.py  start.py
src/jflow/scripts/: jflow.py
tests/: test_common.py
