[metadata]
name = diseaz-dsaflow
version = 0.0.3
author = Dmitry Azhichakov
author_email = dazhichakov@gmail.com
description = Tools for my personal workflow
long_description = file: README.md
url = https://github.com/diseaz-joom/dsaflow
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    diseaz-dsapy @ git+https://github.com/diseaz/dsapy.git
    requests

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    jf = jf.cmd.jf:run
    jflow = jflow.scripts.jflow:run

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist,jflow
statistics = true

[tool:pytest]
pythonpath = src

[mypy]
files = src/jf
